# crewai-bank-account-agent

./: .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  app.py  banking_tools.py  crew_definition.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_ai_analysis.py
agents/: __init__.py  financial_agents.py
auth/: bank_auth_base.py  bank_auth_factory.py  exceptions.py  revolut_auth.py  wise_auth.py
bank_apis/: revolut_api.py  wise_api.py
mock_data/: transactions.json
processors/: cost_analyzer.py  report_generator.py  transaction_processor.py
test_results/: analysis_results.txt  financial_report_20250309_183032.json  mock_transactions.json
tests/: test_banking_agent.py
utils/: __init__.py  data_processor.py  export.py
wise/: __init__.py  client.py
